docs: drop preview option